Tried to work out dataparallel
I do not yet understand Distributed Data Parallel.

Also added number of workers to Config.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ scikit-learn
 thop
 
 #For RepDistiller
-tensorflow
-tensorboard_logger
-torchvision
+# tensorflow
+# tensorboard_logger
+# torchvision
