--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "admm_joint_pruning"]
 	path = src/Imported_Code/admm_joint_pruning
 	url = https://github.com/ambroggi/admm_joint_pruning
+[submodule "Task-Oriented-Feature-Distillation"]
+	path = src/Imported_Code/Task-Oriented-Feature-Distillation
+	url = https://github.com/ambroggi/Task-Oriented-Feature-Distillation
