Adding ACI dataset
This did require a rewrite of many of the dataloading systems so many files were changed. The dataset itself will not be included in the github, you need to go and download that yourself.

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,5 @@ setup.cfg
 results/progressbar.txt
 results/progressbar.txt
 results/extra.csv
+datasets/ACI-IoT-2023-Payload.csv
+datasets/ACI-IoT-Example.csv
