--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,4 @@ results/progressbar.txt
 results/extra.csv
 datasets/ACI-IoT-2023-Payload.csv
 datasets/ACI-IoT-Example.csv
+/testing_memoryallocation
