Running test on ACI
Just doing a run with the current models using ACI data

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ results/extra.csv
 datasets/ACI-IoT-2023-Payload.csv
 datasets/ACI-IoT-Example.csv
 /testing_memoryallocation
+datasets/ACI-IOT-2023-formatted
