--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,5 @@ datasets/ACI-IoT-Example.csv
 datasets/ACI-IOT-2023-formatted
 datasets/ACI-IoT-2023-formatted.parquet
 datasets/ACI-IoT-2023-formatted.csv
+datasets/ACI-IoT-2023-formatted-old.parquet
+datasets/ACI-IoT-2023-formatted-undersampled.parquet
