Added grouped ACI
That is grouping all of the Flood and Scan classes together.

Also added a couple new graphs to graphing results file

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@ datasets/ACI-IoT-2023-formatted.parquet
 datasets/ACI-IoT-2023-formatted.csv
 datasets/ACI-IoT-2023-formatted-old.parquet
 datasets/ACI-IoT-2023-formatted-undersampled.parquet
+*.parquet
