Model from Smallcomputer(v0.96)

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ datasets/ACI-IoT-2023-formatted.csv
 datasets/ACI-IoT-2023-formatted-old.parquet
 datasets/ACI-IoT-2023-formatted-undersampled.parquet
 *.parquet
+!ModelStateDict1727279595.146707.pt
