--- a/.gitignore
+++ b/.gitignore
@@ -163,10 +163,11 @@ testing_things.py
 /.vscode
 setup.cfg
 /savedModels/*
-!/savedModels/info.txt
 results/progressbar.txt
 results/progressbar.txt
 results/extra.csv
+/results/images/*
+!info.txt
 datasets/ACI-IoT-2023-Payload.csv
 datasets/ACI-IoT-Example.csv
 /testing_memoryallocation
@@ -181,3 +182,7 @@ datasets/ACI-IoT-2023-formatted-undersampled.parquet
 !ModelStateDict1727279595.146707.pt
 !ModelStateDict1727236984.0612907.pt
 !ModelStateDict1727213668.3213663.pt
+!ModelStateDict1727406864.8110316.pt
+!ModelStateDict1727494995.7599223.pt
+!ModelStateDict1727571441.4356456.pt
+
