--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,7 @@ results/extra.csv
 !info.txt
 datasets/ACI-IoT-2023-Payload.csv
 datasets/ACI-IoT-Example.csv
-/testing_memoryallocation
+/testing_*
 datasets/ACI-IOT-2023-formatted
 datasets/ACI-IoT-2023-formatted.parquet
 datasets/ACI-IoT-2023-formatted.csv
