Some results + Iterative Theseus
These might be the final results but they also might need more examples. (also included the models for those results)

Also, added an option for Iterative Theseus to only train some of the layers

--- a/.gitignore
+++ b/.gitignore
@@ -192,4 +192,11 @@ data/
 !ModelStateDict1729994748.6165419.pt
 !ModelStateDict1729994750.2650228.pt
 !ModelStateDict1729994704.069299.pt
-
+# Bigcomputer v0.124
+!ModelStateDict1730773846.7166836.pt
+!ModelStateDict1730774170.5897706.pt
+!ModelStateDict1730774175.998793.pt
+# Small on big computer v0.124
+!ModelStateDict1730954262.2141309.pt
+!ModelStateDict1730954482.0195696.pt
+!ModelStateDict1730954322.3189435.pt
