--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,7 @@ data/
 !ModelStateDict1730954262.2141309.pt
 !ModelStateDict1730954482.0195696.pt
 !ModelStateDict1730954322.3189435.pt
+# Big v0.131
+ModelStateDict1731477930.1655464.pt
+ModelStateDict1731478143.0979779.pt
+ModelStateDict1731477998.6417298.pt
