--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,7 @@ data/
 ModelStateDict1731477930.1655464.pt
 ModelStateDict1731478143.0979779.pt
 ModelStateDict1731477998.6417298.pt
+# Small v0.131
+ModelStateDict1731904854.6284766.pt
+ModelStateDict1731905373.8624258.pt
+ModelStateDict1731904816.594452.pt
