get most activations in ttl file
Make values for the highest activated nodes for each class and connect them in the graph.

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,4 @@ ModelStateDict1731477998.6417298.pt
 ModelStateDict1731904854.6284766.pt
 ModelStateDict1731905373.8624258.pt
 ModelStateDict1731904816.594452.pt
+*.ttl
