--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,48 @@
 # developed with Python 3.11.3 and the following pip installs:
-et_xmlfile
-filelock
-fsspec
-gitdb
-GitPython
-Jinja2
-joblib
-MarkupSafe
-mpmath
-networkx
-numpy
-openpyxl
-osqp
-packaging
-pandas
-pillow
-plotly
-psutil
-pyarrow
-python-dateutil
-pytz
-qdldl
-scikit-learn
-scipy
-six
-smmap
-sympy
-tenacity
-thop
-threadpoolctl
-torch
-torchvision
-tqdm
-typing_extensions
-tzdata
+contourpy==1.3.1
+cycler==0.12.1
+et_xmlfile==2.0.0
+filelock==3.17.0
+fonttools==4.56.0
+fsspec==2025.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+Jinja2==3.1.5
+joblib==1.4.2
+kaleido==0.2.1
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+mpmath==1.3.0
+narwhals==1.28.0
+networkx==3.4.2
+numpy==2.2.3
+openpyxl==3.1.5
+osqp==0.6.7.post3
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+plotly==6.0.0
+psutil==7.0.0
+pyarrow==19.0.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+qdldl==0.1.7.post5
+rdflib==7.1.3
+scikit-learn==1.6.1
+scipy==1.15.2
+six==1.17.0
+smmap==5.0.2
+sympy==1.13.1
+tenacity==9.0.0
+thop==0.1.1.post2209072238
+threadpoolctl==3.5.0
+torch==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
 
 # Less restrictive version: (Above is pip freeze output)
 numpy # Because of pytorch 2.2.2
