--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,47 @@
 # developed with Python 3.11.3 and the following pip installs:
-contourpy==1.3.1
+contourpy==1.3.2
 cycler==0.12.1
 et_xmlfile==2.0.0
-filelock==3.17.0
-fonttools==4.56.0
-fsspec==2025.2.0
+filelock==3.18.0
+fonttools==4.58.0
+fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
-Jinja2==3.1.5
-joblib==1.4.2
+Jinja2==3.1.6
+joblib==1.5.0
 kaleido==0.2.1
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
-matplotlib==3.10.0
+matplotlib==3.10.3
 mpmath==1.3.0
-narwhals==1.28.0
+narwhals==1.39.0
 networkx==3.4.2
-numpy==2.2.3
+numpy==2.2.5
 openpyxl==3.1.5
-osqp==0.6.7.post3
-packaging==24.2
+osqp==1.0.4
+packaging==25.0
 pandas==2.2.3
-pillow==11.1.0
-plotly==6.0.0
+pillow==11.2.1
+plotly==6.0.1
 psutil==7.0.0
-pyarrow==19.0.1
-pyparsing==3.2.1
+pyarrow==20.0.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-pytz==2025.1
-qdldl==0.1.7.post5
-rdflib==7.1.3
+pytz==2025.2
+rdflib==7.1.4
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy==1.15.3
+setuptools==80.4.0
 six==1.17.0
 smmap==5.0.2
-sympy==1.13.1
-tenacity==9.0.0
+sympy==1.14.0
 thop==0.1.1.post2209072238
-threadpoolctl==3.5.0
-torch==2.6.0
-torchvision==0.21.0
+threadpoolctl==3.6.0
+torch==2.7.0
+torchvision==0.22.0
 tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2025.1
+typing_extensions==4.13.2
+tzdata==2025.2
 
 # Less restrictive version: (Above is pip freeze output)
 numpy # Because of pytorch 2.2.2
